fixed child indicator arrow alignment for IE and Edge

--- a/app/org/org.component.css
+++ b/app/org/org.component.css
@@ -79,6 +79,7 @@
   position: absolute;
   top: 0;*/
   width: 100%;
+  height: 97vh;
 }
 
 .main-canvas h1 {
